--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -14,6 +14,12 @@ h2 {
   margin-bottom: 1rem;
 }
 
+h3 {
+  font-size: fonts.$s1;
+  font-weight: 450;
+  margin-bottom: 1rem;
+}
+
 p,
 ul,
 ol {
@@ -99,4 +105,14 @@ blockquote {
     background-color: transparent;
     font-weight: normal;
   }
+}
+
+.blog-ssf-entry {
+  margin: 0.5rem 0;
+  color: colors.$text;
+  font-size: fonts.$s0;
+}
+
+.blog-ssf-date {
+  font-size: fonts.$s-1;
 }
