--- a/src/sass/searchSortFilter.scss
+++ b/src/sass/searchSortFilter.scss
@@ -4,25 +4,25 @@
 
 .sort,
 .filter {
-    font-family: fonts.$ui;
+  font-family: fonts.$ui;
 }
 
 .category-btn,
 .filter-btn {
-    color: colors.$text;
-    cursor: pointer;
-    transition: all 0.25s ease-in-out;
-    user-select: none;
-    margin: 4px 6px;
+  color: colors.$text;
+  cursor: pointer;
+  transition: all 0.25s ease-in-out;
+  user-select: none;
+  margin: 4px 6px;
 
-    @include mixins.screen("desktop") {
-        &:hover {
-            color: colors.$blue;
-        }
+  @include mixins.screen('desktop') {
+    &:hover {
+      color: colors.$blue;
     }
+  }
 
-    &.category-selected {
-        font-weight: bold;
-        color: colors.$blue;
-    }
+  &.category-selected {
+    font-weight: bold;
+    color: colors.$blue;
+  }
 }
