--- a/src/pages/[...blog].astro
+++ b/src/pages/[...blog].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../components/layout.tsx';
+import Layout from '../components/layout.astro';
 import Seo from '../components/seo.astro';
 import '../sass/blog.scss';
 import '../sass/links.scss';
@@ -19,10 +19,7 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<head>
-  <Seo title={entry.data.title} description={entry.data.description} />
-</head>
-<Layout currPage={'blog'} client:idle>
+<Layout currPage={'blog'} title={entry.data.title} description={entry.data.description}>
   <h1 class="blog-title">{entry.data.title}</h1>
   <p class="blog-date">{ToDateString(entry.data.date, true)}</p>
   <Content components={{ a: MDLink }} />
