--- a/src/pages/[...root].astro
+++ b/src/pages/[...root].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../components/layout.jsx';
+import Layout from '../components/layout.astro';
 import Seo from '../components/seo.astro';
 import { MDLink } from '../components/links.tsx';
 import '../sass/blog.scss';
@@ -18,10 +18,7 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<head>
-  <Seo title={entry.data.title} description={entry.data.description} />
-</head>
-<Layout currPage={entry.data.title} client:idle>
+<Layout title={entry.data.title} description={entry.data.description} currPage={entry.data.title} client:idle>
   <h1 class="blog-title">{entry.data.title}</h1>
   <Content components={{ a: MDLink }} />
 </Layout>
