--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { faRss, faNewspaper } from '@fortawesome/free-solid-svg-icons';
 import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
-import Layout from '../components/layout';
+import Layout from '../components/layout.astro';
 import Seo from '../components/seo.astro';
 import Visitors from '../components/visitors.tsx';
 import Button from '../components/button.tsx';
@@ -9,10 +9,7 @@ import { ILink } from '../components/links.tsx';
 import '../sass/home.scss';
 ---
 
-<head>
-  <Seo title="bencuan's website" description="builder" />
-</head>
-<Layout currPage="home" client:idle>
+<Layout title="bencuan's website" description="welcome to my website!" currPage="home">
   <h1 class="name">ben cuan</h1>
   <p class="splash">I build things and write about them sometimes.</p>
   <div class="home-buttons">
