--- a/src/pages/[...root].astro
+++ b/src/pages/[...root].astro
@@ -18,7 +18,7 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<Layout title={entry.data.title} description={entry.data.description} currPage={entry.data.title} client:idle>
+<Layout title={entry.data.title} description={entry.data.description} currPage={entry.data.title}>
   <h1 class="blog-title">{entry.data.title}</h1>
   <Content components={{ a: MDLink }} />
 </Layout>
