about and colophon

--- a/src/pages/[...root].astro
+++ b/src/pages/[...root].astro
@@ -1,9 +1,9 @@
 ---
 import { getCollection } from 'astro:content';
 import Layout from '../components/layout.astro';
-import Seo from '../components/seo.astro';
 import { MDLink } from '../components/links.tsx';
 import '../sass/blog.scss';
+import '../sass/links.scss';
 
 export const prerender = true;
 export async function getStaticPaths() {
