--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -187,7 +187,7 @@
   src: url('/fonts/NotoColorEmoji-Regular.ttf') format('truetype');
 }
 
-$header: Eiko, Lora, sans-serif;
+$header: Novela, Lora, sans-serif;
 $body: Garamond, Lora, NotoColorEmoji, serif;
 $ui: Fraktion, Rubik, sans-serif;
 $special: Pine, Novela, sans-serif;
