--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -6,6 +6,7 @@ $padding: 10vw;
 
 :root {
   --rt-transition-closing-delay: 0.15s;
+  --rt-opacity: 1;
 }
 
 html {
@@ -23,6 +24,30 @@ h2,
 h3 {
   color: colors.$text;
   font-family: fonts.$header;
+}
+
+summary,
+details {
+  font-family: fonts.$ui;
+  table {
+    width: 100%;
+  }
+  tr,
+  td {
+    height: 20px;
+    max-height: 20px;
+    line-height: 20px;
+  }
+}
+
+summary {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: fonts.$s0;
+}
+
+details {
+  font-size: fonts.$s-1;
 }
 
 h1 {
@@ -81,11 +106,11 @@ footer {
 
 .container {
   padding: 0 $padding;
-  width: min(80vw, 1366px);
+  width: min(80vw, 1024px);
   margin: auto;
 
   @include mixins.screen('mobile') {
-    width: min(90vw, 1366px);
+    width: min(90vw, 1024px);
     padding: 0 calc($padding / 2);
     padding-top: 6rem;
   }
@@ -138,13 +163,14 @@ html::-webkit-scrollbar-track {
 
 .react-tooltip {
   /* From https://css.glass */
-  background: rgba(30, 102, 245, 0.8) !important;
+  background: rgba(30, 102, 245) !important;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2) !important;
-  backdrop-filter: blur(12px) !important;
+  // backdrop-filter: blur(12px) !important;
   color: white !important;
   font-family: fonts.$ui;
   padding: 2px 5px !important;
   transform: translateY(10px);
+  z-index: 9999 !important;
 }
 
 .react-tooltip__closing {
