--- a/src/components/seo.astro
+++ b/src/components/seo.astro
@@ -1,6 +1,6 @@
 ---
 import { SEO } from 'astro-seo';
-const { title, description } = Astro.props;
+const { title, description, image } = Astro.props;
 ---
 
 <SEO
@@ -10,7 +10,7 @@ const { title, description } = Astro.props;
     basic: {
       title: title,
       type: 'website',
-      image: 'https://raw.githubusercontent.com/64bitpandas/bencuan.me/main/src/images/og-banner.png',
+      image: image ?? 'https://raw.githubusercontent.com/64bitpandas/bencuan.me/main/src/images/og-banner.png',
     },
     optional: {
       siteName: "bencuan's site",
@@ -26,7 +26,7 @@ const { title, description } = Astro.props;
     meta: [
       {
         name: 'twitter:image',
-        content: 'https://raw.githubusercontent.com/64bitpandas/bencuan.me/main/src/images/og-banner.png',
+        content: image ?? 'https://raw.githubusercontent.com/64bitpandas/bencuan.me/main/src/images/og-banner.png',
       },
       { name: 'twitter:title', content: title },
       { name: 'twitter:description', content: description },
