--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -14,6 +14,8 @@ h2 {
   margin-top: spacing.$s2xl;
   margin-bottom: spacing.$sl;
   padding: 0;
+  font-size: fonts.$s2;
+  font-weight: 450;
 }
 
 h3 {
