--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -181,3 +181,10 @@ html::-webkit-scrollbar-track {
     transform: translateY(15px);
   }
 }
+
+.friends {
+  padding-top: 2rem;
+  img {
+    margin: 0 !important;
+  }
+}
