new essay + friend update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,8 +22,8 @@ import '../sass/home.scss';
     <p>
       > latest essay: <MDLink
         extraPretty
-        href="https://open.substack.com/pub/bencuan/p/making-things-that-last-forever-91c?r=3axqei&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true"
-        >making things that last forever</MDLink
+        href="https://open.substack.com/pub/bencuan/p/the-sphere-of-knowledge?r=3axqei&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true"
+        >the sphere of knowledge</MDLink
       >
       <p><Visitors client:idle /></p>
     </p>
