--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,14 +18,16 @@ import '../sass/home.scss';
 
   <div class="text">
     <p>> new? read the <ILink href="blog/foreword">foreword</ILink></p>
-    <p>> visit the <ILink href="friends">friendnet!</ILink></p>
     <p>
-      > latest essay: <MDLink
-        extraPretty
-        href="https://open.substack.com/pub/bencuan/p/the-sphere-of-knowledge?r=3axqei&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true"
-        >the sphere of knowledge</MDLink
-      >
-      <p><Visitors client:idle /></p>
+      > <b>announcement!!</b> You are hereby invited to join <ILink href="blog/sfstreets">San Francisco Streets</ILink> on
+      Saturday, June 1, 2024.
     </p>
+    <p>
+      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/the-lost-magic-of-gaming"
+        >the lost magic of gaming</MDLink
+      >
+    </p>
+    <p>> visit the <ILink href="friends">friendnet!</ILink></p>
+    <p><Visitors client:idle /></p>
   </div>
 </Layout>
