--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -22,6 +22,7 @@ header {
     background-color: colors.$lavender;
     width: 100vw;
     padding: 0;
+    height: 3rem;
   }
 }
 
@@ -65,7 +66,7 @@ header {
   color: colors.$text;
 
   @include mixins.screen('mobile') {
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-align: center;
     max-width: 100vw;
   }
