--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,13 +18,13 @@ import '../sass/home.scss';
 
   <div class="text">
     <p>> new? read the <ILink href="blog/foreword">foreword</ILink></p>
-    <p>
+    <!-- <p>
       > <b>announcement!!</b> You are hereby invited to join <ILink href="blog/sfstreets">San Francisco Streets</ILink> on
       Saturday, June 22, 2024.
-    </p>
+    </p> -->
     <p>
-      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/the-lost-magic-of-gaming"
-        >the lost magic of gaming</MDLink
+      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/switching-to-creative-mode"
+        >switching to creative mode</MDLink
       >
     </p>
     <p>> visit the <ILink href="friends">friendnet!</ILink></p>
