--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ import '../sass/home.scss';
       Saturday, June 22, 2024.
     </p> -->
     <p>
-      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/switching-to-creative-mode"
-        >switching to creative mode</MDLink
+      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/building-a-keyboard-that-can-run"
+        >a keyboard that runs doom</MDLink
       >
     </p>
     <p>> visit the <ILink href="friends">friendnet!</ILink></p>
