--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,16 +18,12 @@ import '../sass/home.scss';
 
   <div class="text">
     <p>> new? read the <ILink href="blog/foreword">foreword</ILink></p>
-    <!-- <p>
-      > <b>announcement!!</b> You are hereby invited to join <ILink href="blog/sfstreets">San Francisco Streets</ILink> on
-      Saturday, June 22, 2024.
-    </p> -->
     <p>
-      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/building-a-keyboard-that-can-run"
-        >a keyboard that runs doom</MDLink
+      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/the-completeish-history-of-the-computer"
+        >the complete(ish) history of the computer keyboard</MDLink
       >
     </p>
-    <p>> visit the <ILink href="friends">friendnet!</ILink></p>
+    <p>> see what i'm <ILink href="projects">currently up to...</ILink></p>
     <p><Visitors client:idle /></p>
   </div>
 </Layout>
