--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -13,7 +13,7 @@ const activeProjects = [
     name: 'whimsical wednesdays',
     status: 'production',
     link: 'https://bencuan.substack.com',
-    description: ['a weekly-ish newsletter that sometimes updates on wednesdays.', 'subscribe to spectate '],
+    description: ['a weekly-ish newsletter that sometimes updates on wednesdays.', 'subscribe to spectate!'],
   },
   {
     name: 'san francisco streets',
