sfstreets coming soon

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -18,6 +18,7 @@ const items = collection.map(item => ({ ...item.data, slug: item.slug }));
     items={items}
     itemCategories={['meta', 'experiments']}
     type="blog"
+    defaultSort={{ category: 'date', state: 'desc' }}
     client:load
   />
 </Layout>
