--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ import '../sass/home.scss';
   <div class="text">
     <p>> new? read the <ILink href="blog/foreword">foreword</ILink></p>
     <p>
-      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/the-completeish-history-of-the-computer"
-        >the complete(ish) history of the computer keyboard</MDLink
+      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/san-francisco-streets"
+        >san francisco streets</MDLink
       >
     </p>
     <p>> see what i'm <ILink href="projects">currently up to...</ILink></p>
