add relmeauth, webmention, and basic feed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
 import { faBluesky } from '@fortawesome/free-brands-svg-icons';
+import SocialFeed from '../components/feed';
+import { faChevronDown } from '@fortawesome/free-solid-svg-icons';
 ---
 
 <!doctype html>
@@ -8,19 +10,23 @@ import { faBluesky } from '@fortawesome/free-brands-svg-icons';
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Under Construction</title>
+    <link rel="me" href="mailto:admin@bencuan.me" />
+    <link rel="webmention" href="https://webmention.io/bencuan.me/webmention" />
+    <title>bencuan.me</title>
     <style>
-      body {
+      html {
         background-color: #24273a; /* Dark background */
-        color: #cdd6f4; /* White text */
+        margin: 0;
         font-family: 'Novela', Times, serif; /* Serif font */
+        color: #cdd6f4; /* White text */
+      }
+      .main {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
         height: 100vh;
-        margin: 0;
       }
       h1 {
         font-size: 3.5em;
@@ -35,14 +41,28 @@ import { faBluesky } from '@fortawesome/free-brands-svg-icons';
         display: inline-block;
         color: #8caaee;
       }
+      .feed {
+        text-align: center;
+      }
+      .feed p {
+        text-align: center;
+        transform: translateY(-80px);
+      }
     </style>
   </head>
-  <body>
+  <div class="main">
     <h2>bencuan.me is currently</h2>
     <h1>under construction</h1>
     <h2>see you on the other side :)</h2>
     <h3>
       follow me on <a href="https://bsky.app/profile/bencuan.me"><FontAwesomeIcon icon={faBluesky} /></a> for updates
     </h3>
-  </body>
+  </div>
+
+  <div class="feed">
+    <p>~~~ keep scrolling for feed ~~~</p>
+    <span class="social-feed"><SocialFeed client:load /></span>
+  </div>
+
+
 </html>
